bk_ida/sjengida/g3/SwitchColor
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchColor/src/crazy.c:663:53: error: use of undeclared identifier 'xmmword_4224D0'
*( __m128i *)t = _mm_load_si128( ( const __m128i *)&xmmword_4224D0); 
                                                    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchColor/src/crazy.c:664:57: error: use of undeclared identifier 'xmmword_4224E0'
*( __m128i *)&t[4] = _mm_load_si128( ( const __m128i *)&xmmword_4224E0); 
                                                        ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchColor/src/crazy.c:665:57: error: use of undeclared identifier 'xmmword_4224F0'
*( __m128i *)&t[8] = _mm_load_si128( ( const __m128i *)&xmmword_4224F0); 
                                                        ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/SwitchColor/src/obj/crazy.o] Error 1
